# tool_chinese_token_generator

./: .gitignore  LICENSE  README.md
FtsTokenGenerator/: CMakeLists.txt
FtsTokenGenerator/Implementation/: FtsTokenGenerator.cpp  TokenGeneratorChinese.cpp  TokenGeneratorChineseCommon.cpp  TokenGeneratorChineseConfig.cpp  TokenGeneratorTai.cpp  TokenGeneratorThai.cpp  XdbDumper.cpp  XdbDumperConfig.cpp  XdbFilter.cpp  XdbFilterConfig.cpp  XdbGenerator.cpp  XdbGeneratorConfig.cpp  main.cpp
FtsTokenGenerator/Interface/: FtsTokenGenerator.h  IFtsTokenGenerator.h  TokenGeneratorChinese.h  TokenGeneratorChineseCommon.h  TokenGeneratorChineseConfig.h  TokenGeneratorTai.h  TokenGeneratorThai.h  XdbDumper.h  XdbDumperConfig.h  XdbFilter.h  XdbFilterConfig.h  XdbGenerator.h  XdbGeneratorConfig.h
FtsTokenGenerator/config/XdbDumper/: char_pinyin_normalize_utf8(from_Oliver_20130701).txt  char_pinyin_normalize_utf8.txt
FtsTokenGenerator/config/XdbFilter/SC/input/: _removed_tokens_table.txt
FtsTokenGenerator/config/XdbGenerator/: README.txt
FtsTokenGenerator/config/XdbGenerator/SC/Normalization_20131017_v01_xdb_filter_optimized/1_simple_gen/: s06_log_tokens_full.txt
FtsTokenGenerator/config/XdbGenerator/TC/: README_how_to_verify.txt
FtsTokenGenerator/config/XdbGenerator/TC/Normalization_20131017_v01_xdb_filter_optimized/1_simple_gen/: README_how_to_verify.txt  xdb_non_fuzzy_org.xdb
xdb_dump/: CMakeLists.txt  char_pinyin_normalize.txt  xdb_dump.cpp
xdb_dump/SC/Normalization_20131017_v01_xdb_filter_optimized/: fts-sc-n.tok
xdb_dump/TC/Normalization_20131017_v01_xdb_filter_optimized/: fts-tc-n.tok_Ori
xdb_filter/: CMakeLists.txt  build.sh  xdb_filter.cpp
xdb_filter/SC/input/: _ignored_suffix_table_sc_utf8.txt
xdb_filter/SC/input/areas/: 05_all_area_map02.txt
xdb_filter/TC/input/: _ignored_suffix_table_tc_utf8.txt  _removed_tokens_table.txt
xdb_filter/TC/input/areas/: 05_all_area_map02.txt
xdb_filter/libscws/: CMakeLists.txt
xdb_gen/: CMakeLists.txt  build.sh  xdb_gen.cpp
xdb_gen/TC/Normalization_20131017_v01_xdb_filter_optimized/1_simple_gen/: s06_log_tokens_full.txt
xdb_gen/TC/Normalization_20131017_v01_xdb_filter_optimized/2_merge_gen/: merge_export(SILK31).txt
