cmake_minimum_required(VERSION 2.8)

project(FtsTokenGenerator)

if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
endif()

set(FTSTOKENGENERATOR_ROOT
  ${PROJECT_SOURCE_DIR}
  CACHE STRING "FTSTOKENGENERATOR_ROOT directory")

add_subdirectory(
  #${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/libscws1.2.1
  #${CMAKE_CURRENT_BINARY_DIR}/ThirdParty/libscws1.2.1)
  ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/libscws1.2.2
  ${CMAKE_CURRENT_BINARY_DIR}/ThirdParty/libscws1.2.2)

set(FTSTOKENGENERATOR_API_INCLUDES
  ${FTSTOKENGENERATOR_ROOT}/Interface/
  ${FTSTOKENGENERATOR_ROOT}/Imports/FakeNavKit/
  CACHE STRING "FTSTOKENGENERATOR_API_INCLUDES path")

include_directories(
  ${libscws_API_INCLUDES}
  ${FTSTOKENGENERATOR_API_INCLUDES})

file(GLOB FTSTOKENGENERATOR_HEADER_FILES ${PROJECT_SOURCE_DIR}/Interface/*.h)
file(GLOB FTSTOKENGENERATOR_SOURCE_FILES ${PROJECT_SOURCE_DIR}/Implementation/*.cpp)

add_executable(${PROJECT_NAME}
  ${FTSTOKENGENERATOR_SOURCE_FILES}
  ${FTSTOKENGENERATOR_HEADER_FILES})

target_link_libraries(${PROJECT_NAME}
  scws)

